--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
+    "formik": "^2.4.3",
     "mdb-react-ui-kit": "^6.1.0",
     "mdb-ui-kit": "^6.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
