--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.14.6",
+    "@mui/material": "^5.14.6",
+    "@mui/styled-engine-sc": "^5.14.6",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "formik": "^2.4.3",
@@ -25,6 +30,7 @@
     "react-dropdown-select": "^4.10.0",
     "react-router-dom": "^6.15.0",
     "react-select": "^5.7.4",
+    "styled-components": "^5.3.11",
     "yup": "^1.2.0"
   },
   "devDependencies": {
