--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dropdown-select": "^4.10.0",
     "react-router-dom": "^6.15.0",
     "react-select": "^5.7.4",
+    "react-sweetalert2": "^0.6.0",
     "styled-components": "^5.3.11",
     "yup": "^1.2.0"
   },
